# blutui

./: Cargo.toml  README.md
src/: editor.rs  event.rs  lib.rs  profman.rs  types.rs
src/bluos/: client.rs  control.rs  mod.rs  protocol.rs
src/bluos/profile/: common.rs  control.rs  device_profile.rs  group_profile.rs  mod.rs  multiplayer_group_profile.rs
src/discover/: mod.rs  net.rs  protocol.rs
src/serde/: number.rs
src/terminal/: app.rs  crossterm.rs  mod.rs
src/terminal/ui/: event.rs  mod.rs  render.rs  stylesheet.rs  utils.rs
src/terminal/ui/components/: del_profile_dialog.rs  keybindings.rs  mod.rs  new_profile_dialog.rs  notification_dialog.rs
src/terminal/ui/widgets/: fill.rs  mod.rs  popup.rs  text_field.rs
