[package]
name = "blutui"
version = "0.1.0"
edition = "2024"
default-run = "blutui"

[[bin]]
name = "blutui"
path = "src/bin/tui.rs"

[[bin]]
name = "settings_crawler"
path = "src/bin/settings_crawler.rs"

[profile.release]
opt-level = "z"

[features]
ui-enable-logs = [ "ansi-to-tui" ]
fs-enable-logs = []

[dependencies]
anyhow = { version = "1" }
ansi-to-tui = { version = "8", optional = true }
bitflags = { version = "2" }
chrono = { version = "0.4" }
clap = { version = "4.4", features = [ "derive" ] }
crossterm = { version = "*", features = [ "event-stream" ] }
futures = { version = "0.3" }
itertools = { version = "0.14" }
netdev = { version = "0.42" }
notify = { version = "8" }
quick-xml = { version = "0.39", features = [ "serialize", "overlapped-lists" ] }
ratatui = { version = "0.30", features = [ "unstable-widget-ref" ] }
reqwest = { version = "0.13", features = [ "query", "json", "stream", "form" ] }
scraper = { version = "0.27", features = [ "serde" ] }
serde = { version = "1", features = [ "serde_derive" ] }
serde_json = { version = "1" }
strum = { version = "0.28" }
strum_macros = { version = "0.28" }
tokio = { version = "1", features = [ "full" ] }
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3", features = [ "env-filter" ] }
tracing-appender = { version = "0.2" }
uuid = { version = "1", features = [ "v5", "serde" ] }
yaml_serde = { version = "0.10" }
